--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>Bnkrll-App</finalName>
 	</build>
 
 </project>
